<resources>

    <string name="app_name">NB-Recorder</string>
    <string name="menu_remove_old_filed">Alte Aufnahmen löschen</string>
    <string name="button_rec">Aufnahme</string>
    <string name="button_rec_stop">Stopp</string>
    <string name="button_unlock">Entsperren</string>
    <string name="button_send">Senden</string>
    <string name="label_1">Schritt 1:</string>
    <string name="label_2">Schritt 2:</string>
    <string name="description_1">\&quot;Aufnahme\&quot; drücken. Wenn du fertig bist, drücke \&quot;Stopp\&quot;.</string>
    <string name="description_2">Mit einem Druck auf \&quot;Senden\&quot; kannst du mir deine fertigen Aufnahmen mailen.</string>
    <string name="status_acceleration">Beschleunigung</string>
    <string name="status_location">GPS</string>
    <string name="header_available_recordings">Fertige Aufnahmen</string>
    <string name="header_sensor_status">Sensoren</string>
    <string name="status_no_recordings">keine Aufnahmen vorhanden</string>
    <string name="dialog_delete_old_recordings_title">Alte Aufnamen löschen?</string>
    <string name="dialog_delete_old_recordings_message">Es werden %d Aufnahmen und temporäre Dateien gelöscht.\nDie neuste fertige Aufnahme wird nicht gelöscht.</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_testbed">Testbed</string>
    <string name="menu_testbed">Testbed</string>

</resources>