<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
		
        <TextView
            android:id="@+id/label_1"
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/label_1" />
        
        <Button
            android:id="@+id/button_rec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/label_1"
            android:layout_toRightOf="@id/label_1"
            android:text="@string/button_rec" />

<TextView
    style="@style/description"
    android:id="@+id/description_1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/button_rec"
    android:text="@string/description_1" /><TextView
            android:id="@+id/header_sensors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/description_1"
            android:padding="5dp"
            android:text="@string/header_sensor_status"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/status_acceleration"
            style="@style/textUnknown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/header_sensors"
            android:text="@string/status_acceleration"
            android:textSize="16sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/status_location"
            style="@style/textUnknown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/status_acceleration"
            android:layout_toRightOf="@id/status_acceleration"
            android:text="@string/status_location"
            android:textSize="16sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/status_location"
            android:textSize="16sp"
            android:visibility="gone" />
        
        <TextView
            android:id="@+id/label_2"
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/status"
            android:layout_marginTop="16dp"
            android:text="@string/label_2" />
        
        <Button
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/label_2"
            android:layout_toRightOf="@id/label_2"
            android:text="@string/button_send" />
        
<TextView
    android:id="@+id/description_2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/label_2"
    android:text="@string/description_2"
    style="@style/description"/>

        <TextView
            android:id="@+id/header_finished_recordings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/description_2"
            android:padding="5dp"
            android:text="@string/header_available_recordings"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/status_finished_recordings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/header_finished_recordings"
            android:padding="5dp"
            android:text="@string/status_no_recordings" />

        <Button
            android:id="@+id/lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/button_unlock"
            android:visibility="gone" />

        

    </RelativeLayout>

</ScrollView>